# coral-super

./: .gitignore  CMakeLists.txt  README.md  make-release.cmake
crt-install/: CMakeLists.txt
patches/: libzip.patch
patches/libzip/: define-snprintf.patch  dll-prefix-workaround.patch  fix-manfmt.patch
patches/protobuf/: CMakeLists.txt
